--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="flex flex-col items-center justify-center h-screen bg-gray-100">
   <h1 class="text-4xl font-bold text-blue-600">🚀 Frontend Angular + Tailwind!</h1>
   <p class="mt-4 text-gray-700">Pronto para se conectar com o backend Java!</p>
