--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -6,8 +6,8 @@
 
   <div>
     <ng-container *ngIf="!authService.isLoggedIn(); else logged">
-      <button (click)="openRegister()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Registrar</button>
-      <button (click)="openLogin()" class="ml-2 px-4 py-2 bg-gray-700 text-white rounded-lg hover:bg-gray-800">Login</button>
+      <button (click)="openRegister()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 cursor-pointer">Registrar</button>
+      <button (click)="openLogin()" class="ml-2 px-4 py-2 bg-gray-700 text-white rounded-lg hover:bg-gray-800 cursor-pointer">Login</button>
     </ng-container>
 
     <ng-template #logged>
