adicionado componentes footer, game-of-week e mudado identidade visual do site

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,4 +3,8 @@
 
 <app-carousel></app-carousel>
 
+<app-game-of-week></app-game-of-week>
+
 <app-user-carousel></app-user-carousel>
+
+<app-footer></app-footer>
