--- a/src/app/core/components/games-carousel/carousel.component.html
+++ b/src/app/core/components/games-carousel/carousel.component.html
@@ -1,5 +1,4 @@
-<div class="flex items-center justify-center gap-4 w-full max-w-7xl mx-auto mt-10 px-4">
-  <!-- Botão Anterior -->
+<div class="max-w-7xl flex items-center justify-center gap-4 w-full mx-auto mt-10 px-4 py-4">
   <button
     (click)="prev()"
     [disabled]="index === 0"
@@ -9,7 +8,6 @@
     ‹
   </button>
 
-  <!-- Carrossel -->
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 w-full">
     <div
       *ngFor="let game of visible"
@@ -35,7 +33,6 @@
     </div>
   </div>
 
-  <!-- Botão Próximo -->
   <button
     (click)="next()"
     [disabled]="index + 4 >= gameCards.length"
