--- a/src/app/core/components/user-carousel/user-carousel.component.html
+++ b/src/app/core/components/user-carousel/user-carousel.component.html
@@ -8,8 +8,9 @@
   </button>
 
   <div class="grid grid-cols-3 sm:grid-cols-6 gap-6 w-full">
-    <div
+    <a
       *ngFor="let user of visible"
+      [href]="'/profile/' + user.id"
       class="flex flex-col items-center"
     >
       <div
@@ -21,10 +22,10 @@
           class="w-full h-full rounded-full object-cover border-2 border-white"
         />
       </div>
-      <span class="mt-2 text-sm font-medium text-gray-700 text-center">
+      <span class="mt-2 text-sm font-medium text-white text-center">
         {{ user.nickname }}
       </span>
-    </div>
+    </a>
   </div>
 
   <button
