--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,3 @@
 <app-header></app-header>
-
-
-<app-carousel></app-carousel>
-
-<app-game-of-week></app-game-of-week>
-
-<app-user-carousel></app-user-carousel>
-
+<router-outlet></router-outlet>
 <app-footer></app-footer>
