--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -3,13 +3,15 @@
     <div class="flex items-center gap-2">
       <a [routerLink]="['/']" class="flex items-center gap-2">
         <img src="assets/logo3.svg" alt="Logo" class="h-10 w-10" />
-        <span class="font-bold text-xl text-white hover:text-pink-400">Los Pitufs</span>
+        <span class="font-bold text-xl text-white hover:text-pink-400">
+          Los Pitufs
+        </span>
       </a>
     </div>
 
     <div class="flex items-center gap-8 text-white text-sm font-medium">
       <!-- Usuário não está logado -->
-      <ng-container *ngIf="!authService.isLoggedIn(); else logged">
+      <ng-container *ngIf="!authService.user(); else logged">
         <a (click)="openRegister()" class="hover:text-pink-400 cursor-pointer transition-colors text-xl">
           Registrar
         </a>
@@ -20,7 +22,12 @@
 
       <!-- Usuário está logado -->
       <ng-template #logged>
-        <span class="text-lg">Olá, {{ authService.user()?.username }}</span>
+        <a
+          [routerLink]="['/user', authService.user()?.id]"
+          class="hover:text-pink-400 cursor-pointer transition-colors text-xl"
+        >
+          Olá, {{ authService.user()?.username }}
+        </a>
         <a (click)="logout()" class="hover:text-pink-400 cursor-pointer transition-colors text-xl">
           Logout
         </a>
