--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<app-hero-banner></app-hero-banner>
+<app-gamer-divider></app-gamer-divider>
 <app-carousel></app-carousel>
 <app-game-of-week></app-game-of-week>
+<app-gamer-divider></app-gamer-divider>
 <app-user-carousel></app-user-carousel>
