--- a/src/app/core/components/game-of-week/game-of-week.component.html
+++ b/src/app/core/components/game-of-week/game-of-week.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div>
-      <a [href]="destaque.link" class="inline-block bg-purple-700 hover:bg-purple-800 text-white font-semibold py-2 px-4 rounded transition-colors">
+      <a [href]="destaque.link" class="inline-block bg-pink-500 text-white rounded-lg hover:bg-pink-600 transition cursor-pointer font-semibold py-2 px-4 rounded transition-colors">
         Visualizar Jogo
       </a>
     </div>
