--- a/src/app/core/components/games-carousel/carousel.component.html
+++ b/src/app/core/components/games-carousel/carousel.component.html
@@ -25,7 +25,7 @@
         </p>
         <a
           [routerLink]="'/games/' + game.id"
-          class="mt-auto inline-block text-center bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition"
+          class="mt-auto inline-block text-center bg-pink-500 text-white rounded-lg hover:bg-pink-600 transition cursor-pointer py-2 px-4 rounded-lg transition"
         >
           Ver página do jogo
         </a>
